--- a/config-example.json
+++ b/config-example.json
@@ -1,4 +1,37 @@
 {
-    "prefix": "!",
-	"token": "TOKEN"
+    "_Separator1_": 	"---------------------------",
+	"_MainSettings_": 	"-------Main Settings-------",
+	"_Separator2_": 	"---------------------------",
+	
+	"prefix": "!",
+	"token": "TOKEN_GOES_HERE",
+	"ownerID": "YOUR_ID",
+	"debug": "false",
+
+	"_Separator3_": 	"---------------------------",
+	"_DziennikConfig_": "-----Dziennik Settings-----",
+	"_Separator4_": 	"---------------------------",
+	
+	"dziennik_enabled": true,
+	"dziennikToken": "TOKEN_GOES_HERE",
+	"dziennikSymbol": "SYMBOL_GOES_HERE",
+	"dziennikPIN": "PIN_GOES_HERE",
+
+	"_Separator5_": 	"---------------------------",
+	"_Embeds_": 		"-------Embed Settings------",
+	"_Separator6_": 	"---------------------------",
+
+	"authorImage": "https://i.imgur.com/g3a3tLo.png",
+	"footerCopyright": "Wafelowski.dev",
+	"footerCopyrightImage": "https://i.imgur.com/g3a3tLo.png",
+
+
+	"_Separator7_": 	"---------------------------",
+	"_LeaveIt_": 		"---------Do not touch------",
+	"_Separator8_": 	"---------------------------",
+
+
+	"_Separator98_": 	"---------------------------",
+	"_Wafel_": 			"-------Wafelowski.dev------",
+	"_Separator99_": 	"---------------------------"
 }
