--- a/config-example.json
+++ b/config-example.json
@@ -11,24 +11,20 @@
 
 	"_Separator3_": 	"---------------------------",
 	"_DziennikConfig_": "-----Dziennik Settings-----",
-	"_Dziennik2_": 		"--Leave credentials empty--",
-	"_Dziennik3_":		"-----if using user mode----",
 	"_Separator4_": 	"---------------------------",
 	"_DziennikModes_":  "------Dziennik Modes-------",
-	"_Dziennik5_": 		"----------global-----------",
-	"_Dziennik6_":		"-----------user------------",
+	"_Dziennik1_": 		"-----------both------------",
+	"_Dziennik2_": 		"----------global-----------",
+	"_Dziennik3_":		"-----------user------------",
 	"_Separator5_": 	"---------------------------",
 	
-	"dziennik_mode": "global / user",
-	"dziennikToken": "TOKEN_GOES_HERE",
-	"dziennikSymbol": "SYMBOL_GOES_HERE",
-	"dziennikPIN": "PIN_GOES_HERE",
+	"dziennik_mode": "global / user / both",
+	"RODO": true,
 
 	"_Separator6_": 	"---------------------------",
 	"_Embeds_": 		"-------Embed Settings------",
 	"_Separator7_": 	"---------------------------",
 
-	"authorImage": "https://i.imgur.com/g3a3tLo.png",
 	"footerCopyright": "Wafelowski.dev",
 	"footerCopyrightImage": "https://i.imgur.com/g3a3tLo.png",
 
