--- a/config-example.json
+++ b/config-example.json
@@ -19,6 +19,7 @@
 	"_Separator5_": 	"---------------------------",
 	
 	"dziennik_mode": "global / user / both",
+	"api_name": "Nazwa API",
 	"RODO": true,
 
 	"_Separator6_": 	"---------------------------",
